# pytest-md-report

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  appveyor.yml  pylama.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  on_push_default_branch.yml  release.yml  tests.yml
examples/: gfm_report.md  pyproject.toml  report.md  test_error.py  test_failed.py  test_pass.py  test_skipped.py  test_xfailed.py  test_xpassed.py
pytest_md_report/: __init__.py  __version__.py  _const.py  _style_filter.py  plugin.py
requirements/: requirements.txt
tests/: test_option.py  test_plugin.py
